Fixed width on scrollbar

--- a/jquery.dropmenu.css
+++ b/jquery.dropmenu.css
@@ -5,6 +5,8 @@
     border:				solid 1px WindowFrame;
     background-color:	white;
     box-shadow:			0 .2em .4em rgba(0, 0, 0, .25);
+    -moz-box-shadow:	0 .2em .4em rgba(0, 0, 0, .25);
+    -webkit-box-shadow:	0 .2em .4em rgba(0, 0, 0, .25);
 }
 
 .dropdown-content {
